--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -1,12 +1,11 @@
 .container_auth {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: auto;
-    background-color: #fff;
+    height: 100vh;
+    background-color: #f5f5f5;
     flex-wrap: wrap;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding: 20px;
 
     & .container_left {
       display: flex;
@@ -16,7 +15,8 @@
         display: flex;
         background: white;
         padding: 30px;
-        box-shadow: 5px 10px 8px 0px #888888;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
         width: auto;
         text-align: center;
         justify-content: center;
@@ -31,6 +31,7 @@
               color: rgba(212, 15, 19, 1);
               font-size: 24px;
               font-weight: bold;
+              margin-bottom: 20px;
             }
 
             & .div_toggle_email_sdt {
